# latex-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MEMORY.md  README.md  SECURITY.md  SKILL.md  TOOLS.md
.github/: copilot-instructions.md
.github/workflows/: release.yml  rust.yml
src/: api.rs  config.rs  constants.rs  main.rs  preview.rs  queue.rs  state.rs  utils.rs
src/api/: arxiv.rs  mod.rs  ollama.rs  openai_compat.rs
src/ui/: ai.rs  editor.rs  file_ops.rs  header.rs  layout.rs  mod.rs  settings.rs  webview.rs
src/ui/sidebar/: arxiv.rs  mod.rs  outline.rs
