[package]
name = "markdown-rs"
version = "0.2.2"
edition = "2021"
authors = ["Nil Gradisnik <nil.gradisnik@gmail.com>"]
description = "Fast, simple, distraction free Markdown editor."
repository = "@nilgradisnik/markdown-rs"
readme = "README.md"
license = "MIT"

[dependencies]
gtk = { version = "0.18", features = ["v3_24"] }
webkit2gtk = "2.0"
gio = "0.18"
glib = "0.18"
comrak = "0.26"
horrorshow = "0.8"
