[package]
name = "latex-rs"
version = "1.1.0"
edition = "2021"
authors = ["Andres Caicedo <andrezz1997@gmail.com>"]
description = "A professional, modern LaTeX editor with AI integration and live preview."
repository = "https://github.com/AndresCdo/latex-rs"
readme = "README.md"
license = "MIT"

[dependencies]
gtk4 = { version = "0.9", features = ["v4_12"] }
adw = { package = "libadwaita", version = "0.7" }
webkit6 = "0.4"
sourceview5 = "0.9"
gio = "0.20"
glib = "0.20"

horrorshow = "0.8"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
diffy = "0.3"
tempfile = "3.10"
html-escape = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"
pango = { version = "0.21.5", features = ["v1_50"] }
regex = "1.10"
dirs = "6.0.0"
toml = "0.9.11"
async-trait = "0.1.89"
futures = "0.3.31"
